[package]
name = "gameOfLife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
queues = "1.0"
rand = "0.8"
colored = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rayon = "1"
threadpool = "1.8"
crossbeam-queue = "0.3"
crossbeam = "0.8"
progress_bar = "1.0.2"
pbr = "1.0.4"
plotters = "0.3"
csv = "1.1"
tui = "0.19"
crossterm = "0.25"
